--- a/CV-Maker/appsettings.Development.json
+++ b/CV-Maker/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ApiKey": "your api key",
+    "EndPoint": "https://api.openai.com/v1/chat/completions"
 }
